<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorfondoactivity"
        android:orientation="vertical"
        tools:context="com.example.ctorres.superagentemovil3.superagente.IngresoPreguntaPersonal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorFondo"
                android:gravity="center"
                android:text="@string/tv_titulo_ingreso_pregunta"
                android:textColor="@color/color_blanco"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tv_ingrese_pregunta"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_pregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:hint="@string/ht_ejemplo_pregunta"
                android:inputType="textCapCharacters"
                android:maxLength="25"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/tv_ingrese_respuesta"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_respuesta"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_blanco"
                android:gravity="center"
                android:hint="@string/ht_ejemplo_respuesta"
                android:maxLength="25"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/tv_conrme_respuesta"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_confirma_respuesta"
                android:layout_width="280dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/color_blanco"
                android:gravity="center"
                android:hint="@string/ht_ejemplo_respuesta"
                android:maxLength="25"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_superagente_seguro" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_aceptar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/color_blanco"
                android:text="@string/btn_aceptar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_regresar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/color_blanco"
                android:text="@string/btn_regresar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>