<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorfondoactivity"
    tools:context="com.example.ctorres.superagentemovil3.superagente.SeleccionMedPagoRecarga">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textViewInfoElectronica"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorFondo"
            android:gravity="center"
            android:text="@string/tv_titulo_recarga_medPago"
            android:textColor="@color/color_blanco"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="130dp">

        <RadioGroup
            android:id="@+id/rgGeneralRecarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdbtn_selecPago_tarjetaRecarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_blanco"
                android:text="@string/rdb_recarga_tarjeta" />

            <RadioButton
                android:id="@+id/rdbtn_selecPago_efectivoRecarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_blanco"
                android:text="@string/rdb_recarga_efectivo" />


        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/borders"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_nota_recarga_medPago"
            android:textAlignment="center"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_selecPago_regMenuRecarga"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_regresar_menu" />

        <Button
            android:id="@+id/btn_selecPago_salirRecarga"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/btn_salir_recarga"/>

    </LinearLayout>




</LinearLayout>
