<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorfondoactivity"
    android:orientation="vertical"
    tools:context="com.example.ctorres.superagentemovil3.superagente.ClaveAcceso">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorFondo"
            android:gravity="center"
            android:text="@string/tv_titulo_clave_acceso"
            android:textColor="@color/color_blanco"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_clave_acceso"
                android:textStyle="bold" />

            <!--<android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                app:passwordToggleEnabled="true">-->

            <EditText
                android:id="@+id/txt_clave_acceso"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/color_blanco"
                android:inputType="textPassword"
                android:maxLength="8"/>
            <!--</android.support.design.widget.TextInputLayout>-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_confirm_clave_acceso"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_confirm_clave_acceso"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/color_blanco"
                android:inputType="textPassword"
                android:maxLength="8"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_segunda_clave_acceso"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerSegClaveAcceso"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/spinner_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_confirm_segunda_clave_acceso"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_resp_seg_clave"
                android:layout_width="250dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:background="@color/color_blanco" />

            <Button
                android:id="@+id/btn_siguiente"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/btn_siguiente" />

            <Button
                android:id="@+id/btn_otra_pregunta"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/btn_otra_pregunta" />

            <Button
                android:id="@+id/btnRegresar"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/btn_regresar" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>